@@ -84,7 +84,7 @@ public:
   static const char *filename_label;
   static const char *filter_label;
 };
-extern FL_EXPORT char *fl_dir_chooser(const char *message,const char *fname);
-extern FL_EXPORT char *fl_file_chooser(const char *message,const char *pat,const char *fname);
+extern FL_EXPORT char *fl_dir_chooser(const char *message,const char *fname,int relative=0);
+extern FL_EXPORT char *fl_file_chooser(const char *message,const char *pat,const char *fname,int relative=0);
 extern FL_EXPORT void fl_file_chooser_callback(void (*cb)(const char*));
 #endif
